--- a/src/Styles/Core.less
+++ b/src/Styles/Core.less
@@ -65,7 +65,7 @@ a:hover {
 .modal {
     position: absolute;
     margin: auto;
-    background-color: @modal-panel-color;
+    background-color: @panel-background-color;
     top: 0;
     left: 0;
     bottom: 0;
@@ -73,7 +73,7 @@ a:hover {
     max-height: 100%;
     max-width: 100%;
     font-family: @default-font;
-    color: #ffffff;
+    color: @panel-emphasized-text-color;
 }
 
 @media print {
