--- a/src/Styles/LocationBar.less
+++ b/src/Styles/LocationBar.less
@@ -1,13 +1,8 @@
 .location-bar {
-    .opaque-to-input;
-    position: absolute;
+    .floating-horizontal;
     right: 170px;
     bottom: 30px;
     height: 30px;
-    border-radius: 15px;
-    background-color: rgba(47,53,60,80%);
-    padding-left: 5px;
-    padding-right: 5px;
 }
 
 .location-bar-label {
@@ -16,7 +11,7 @@
     font-weight: bold;
     font-size: 16px;
     line-height: 30px;
-    color: #ffffff;
+    color: @floating-text-color;
     padding-left: 10px;
 }
 
@@ -25,12 +20,6 @@
     font-family: @default-font;
     font-size: 16px;
     line-height: 30px;
-    color: #ffffff;
+    color: @floating-text-color;
     padding-right: 10px;
-}
-
-@media print {
-    .location-bar {
-        display: none;
-    }
 }
