--- a/src/Styles/PopupMessage.less
+++ b/src/Styles/PopupMessage.less
@@ -5,7 +5,7 @@
 }
 
 .popup-message-header {
-    border-bottom: 1px solid #9A9A9B;
+    border-bottom: @panel-element-border;
 }
 
 .popup-message-content {
@@ -22,7 +22,7 @@
     cursor: pointer;
     font-size: 18pt;
     font-weight: bold;
-    color: #0099CC;
+    color: @panel-emphasized-text-color;
 }
 
 .popup-message h1 {
@@ -30,4 +30,5 @@
     padding: 15px;
     font-weight: bold;
     margin: 0;
+    color: @panel-emphasized-text-color;
 }
