--- a/src/Styles/DragDrop.less
+++ b/src/Styles/DragDrop.less
@@ -12,5 +12,5 @@
     padding-left: 10px;
     padding-right: 10px;
     text-align: center;
-    border: 1px solid white;
+    border: 1px solid #CCCCCC;
 }
