--- a/src/Styles/NowViewingTab.less
+++ b/src/Styles/NowViewingTab.less
@@ -2,15 +2,15 @@
     display: table;
     width: 100%;
     line-height: 40px;
-    border-bottom: 1px solid @panel-border-color;
-    border-top: 1px solid @panel-border-color;
+    border-bottom: @panel-element-border;
+    border-top: @panel-element-border;
     cursor: pointer;
 }
 
 .now-viewing-item-label {
     display: table-cell;
     font-size: 16px;
-    color: #FFFFFF;
+    color: @panel-emphasized-text-color;
 }
 
 .now-viewing-item-icon-holder {
@@ -23,7 +23,7 @@
     position: relative;
     width: 15px;
     height: 15px;
-    fill: #CCCCCC;
+    fill: @panel-emphasized-text-color;
 }
 
 .now-viewing-item-details {
@@ -37,15 +37,6 @@
     display: table-cell;
     text-align: right;
     width: 20px;
-}
-
-.now-viewing-info-icon {
-    position: relative;
-    width: 18px;
-    height: 18px;
-    fill: #CCCCCC;
-    top: 3px;
-    margin-right: 16px;
 }
 
 .now-viewing-toolbar {
@@ -63,7 +54,7 @@
     color: @highlight-color;
     line-height: 38px;
     padding-left: 16px;
-    border-top: 1px solid @panel-border-color;
+    border-top: @panel-element-border;
 }
 
 .now-viewing-list {
@@ -79,9 +70,9 @@
     padding-left: 16px;
     padding-top: 16px;
     padding-bottom: 10px;
-    color: #ffffff;
+    color: @panel-emphasized-text-color;
     font-weight: lighter;
-    border-top: 1px solid @panel-border-color;
+    border-top: @panel-element-border;
 }
 
 .now-viewing-item-arrow-holder {
@@ -93,7 +84,7 @@
     position: relative;
     width: 15px;
     height: 15px;
-    fill: #CCCCCC;
+    fill: @panel-emphasized-text-color;
     margin-right: 16px;
 }
 
@@ -103,7 +94,7 @@
     padding-bottom: 10px;
     padding-left: 20px;
     text-decoration: none;
-    color: #ffffff;
+    color: @panel-emphasized-text-color;
 }
 
 .now-viewing-legend-image {
@@ -116,7 +107,7 @@
     padding-left: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
-    color: #ffffff;
+    color: @panel-emphasized-text-color;
 }
 
 .now-viewing-opacity-slider {
