--- a/src/Styles/SettingsPanel.less
+++ b/src/Styles/SettingsPanel.less
@@ -27,7 +27,6 @@
 }
 
 .settings-panel-body {
-    color: #ffffff;
 }
 
 .settings-panel-section {
@@ -35,7 +34,8 @@
 
 .settings-panel-section-header {
     padding: 5px;
-    background-color: @brand-bar-background-color;
+    background-color: @panel-section-background-color;
+    color: @panel-emphasized-text-color;
 }
 
 .settings-panel-section-content {
@@ -49,17 +49,19 @@
 .settings-panel-map-view-button {
     .clickable;
     display: inline;
-    border: 1px solid @panel-border-color;
+    border: @panel-element-border;
     padding: 5px;
+    color: @panel-text-color;
 }
 
 .settings-panel-map-view-button-selected {
     background-color: @highlight-color;
-    color: #ffffff;
+    color: @panel-emphasized-text-color;
 }
 
 .settings-panel-base-map-label {
     padding-bottom: 10px;
+    color: @panel-emphasized-text-color;
 }
 
 .settings-panel-base-map-choices {
@@ -67,15 +69,15 @@
 
 .settings-panel-base-map-button {
     .clickable;
-    border: 1px solid @panel-border-color;
+    border: @panel-element-border;
 }
 
 .settings-panel-base-map-button-selected {
-    border: 1px solid @highlight-color;
+    border: 1px solid @panel-selected-text-color;
 }
 
 .settings-panel-base-map-button:hover {
-    border: 1px solid white;
+    border: 1px solid @panel-emphasized-text-color;
 }
 
 @media print {
