--- a/src/main.less
+++ b/src/main.less
@@ -1,30 +1,53 @@
 @default-font: 'Roboto Condensed', sans-serif;
 @highlight-color: #68ADFE;
-
-// Brand bar
-@brand-bar-background-color: #282D32;
-@brand-bar-opacity: 1.0;
-@brand-bar-width: 350px; // not counting the diagonal portion
+@left-side-panels-width: 350px;
 
 // Panels
 @panel-background-color: #2F353C;
-@panel-opacity: 1.0;
-@panel-border-color: #979797;
+@panel-text-color: #CCCCCC;
+@panel-emphasized-text-color: #FFFFFF;
+@panel-selected-text-color: @highlight-color;
+@panel-box-shadow: 2px 2px 5px rgba(0,0,0,0.26);
+@panel-element-border: 1px solid #CCCCCC;
+@panel-section-background-color: #282D32;
+@panel-form-input-background-color: #838689;
+@panel-form-input-text-color: #FFFFFF;
+@panel-form-button-background-color: #A1A3A6;
+@panel-form-button-text-color: #FFFFFF;
 
-// Explorer panel options
-@explorer-panel-width: @brand-bar-width;
-@explorer-active-tab-color: @highlight-color;
-@explorer-inactive-tab-color: #666666;
+// Explorer panel
+@explorer-panel-width: @left-side-panels-width;
+@explorer-panel-header-background-color: #757f88;
+@explorer-panel-inactive-tab-text-color: @panel-text-color;
+@explorer-panel-active-tab-text-color: @panel-emphasized-text-color;
+@explorer-panel-active-tab-underline-color: @highlight-color;
 @explorer-panel-close-animation-length: 0.25s;
 @explorer-panel-tab-switch-animation-length: 0.25s;
 
-// Modal panels
-@modal-panel-color: #2F353C;
+// Brand bar
+@brand-bar-background-color: @panel-section-background-color;
+@brand-bar-width: @left-side-panels-width;
+
+// Floating elements
+@floating-background-color: rgba(47,53,60,80%);
+@floating-text-color: #CCCCCC;
+@floating-element-border: 1px solid #555555;
+
+// Menu bar
+@menu-bar-text-color: @floating-text-color;
+@menu-bar-active-background-color: #757f88;
+@menu-bar-active-text-color: #ffffff;
+
+// Search tab
+@search-tab-input-background-color: #A1A3A6;
+@search-tab-input-text-color: #FFFFFF;
+
 
 @import "Styles/Reset.less";
 @import "Styles/Core.less";
 @import "Styles/Panels.less";
 @import "Styles/Map.less";
+@import "Styles/Floating.less";
 
 // Individual widgets
 @import "Styles/AddDataPanel.less";
