--- a/src/Styles/LocationBar.less
+++ b/src/Styles/LocationBar.less
@@ -18,6 +18,7 @@
 .location-bar-value {
     display: inline-block;
     font-family: @default-font;
+    font-weight: 100;
     font-size: 16px;
     line-height: 30px;
     color: @floating-text-color;
