Fix size of Add Data URL input box in IE11.

--- a/src/Styles/AddDataPanel.less
+++ b/src/Styles/AddDataPanel.less
@@ -81,6 +81,7 @@
     padding-right: @add-data-url-input-padding;
     border: @add-data-url-input-border;
     width: 100%;
+    height: 38px;
     background-color: @panel-form-input-background-color;
     color: @panel-form-input-text-color;
     line-height: 38px;
