Standardised font sizes and families
- First pass across navigation and other UI components
- Improved legibility by replacing all Roboto Condensed with Roboto
Light (with the exception of data catalogue items)

--- a/src/Styles/BrandBar.less
+++ b/src/Styles/BrandBar.less
@@ -28,9 +28,10 @@
 
 .brand-bar-name {
     color: #ffffff;
-    font-family: @default-font;
+    font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, "Lucida Grande", sans-serif;
     font-size: 20px;
     vertical-align: middle;
+    line-spacing: 0.04em;
 }
 
 .brand-bar-name strong {
