--- a/src/Styles/DataCatalogTab.less
+++ b/src/Styles/DataCatalogTab.less
@@ -37,6 +37,7 @@
 
 .data-catalog-item-label {
     display: table-cell;
+    font-family: @condensed-font;
     font-size: 16px;
     color: @panel-text-color;
     font-weight: lighter;
