--- a/src/Styles/SearchTab.less
+++ b/src/Styles/SearchTab.less
@@ -17,10 +17,12 @@
     left: 0;
     height: 40px;
     width: @explorer-panel-width;
+    font-size: 14px;
     background-color: @search-tab-input-background-color;
     color: @search-tab-input-text-color;
     line-height: 38px;
-    padding-left: 16px;
+    padding-left: 10px;
+    padding-right: 15px;
 }
 
 .search-tab-input::-webkit-input-placeholder {
