--- a/src/main.less
+++ b/src/main.less
@@ -1,4 +1,5 @@
-@default-font: 'Roboto Condensed', sans-serif;
+@default-font: 'Roboto', sans-serif;
+@condensed-font: 'Roboto Condensed', sans-serif;
 @highlight-color: #68ADFE;
 @left-side-panels-width: 350px;
 
