Typography and colour tweaks
- Switched out static font sizes (px) for adaptive em
- Fixed component colour inconcistancies
- Updated settings panel dimensions, margins

--- a/src/Styles/LocationBar.less
+++ b/src/Styles/LocationBar.less
@@ -9,7 +9,7 @@
     display: inline-block;
     font-family: @default-font;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 0.9em;
     line-height: 30px;
     color: @floating-text-color;
     padding-left: 10px;
@@ -19,7 +19,7 @@
     display: inline-block;
     font-family: @default-font;
     font-weight: 100;
-    font-size: 14px;
+    font-size: 0.9em;
     line-height: 30px;
     color: @floating-text-color;
     padding-right: 10px;
