--- a/src/Styles/MenuBar.less
+++ b/src/Styles/MenuBar.less
@@ -3,20 +3,20 @@
     right: 25px;
     top: 20px;
     height: 30px;
+    border: 1px solid rgba(255,255,255,0.1);
 }
 
 .menu-bar-item {
     display: inline-block;
     font-family: @default-font;
-    font-size: 14px;
+    font-size: 0.9em;
     font-weight: 300;
     line-height: 30px;
     color: @menu-bar-text-color;
     padding-left: 10px;
     padding-right: 10px;
     cursor: pointer;
-    border-right: 1px solid rgb(100,100,100);
-    border-right: 1px solid rgba(100,100,100, 0.6);
+    border-right: @panel-element-border;
 }
 
 .menu-bar-item:last-child {
