--- a/src/Styles/SearchTab.less
+++ b/src/Styles/SearchTab.less
@@ -17,7 +17,7 @@
     left: 0;
     height: 40px;
     width: @explorer-panel-width;
-    font-size: 14px;
+    font-size: 0.95em;
     background-color: @search-tab-input-background-color;
     color: @search-tab-input-text-color;
     line-height: 38px;
@@ -67,7 +67,7 @@
 .search-tab-provider-label {
     display: table-cell;
     padding-left: 16px;
-    font-size: 16px;
+    font-size: 0.95em;
     color: @panel-emphasized-text-color;
 }
 
@@ -108,13 +108,13 @@
 
 .search-tab-provider-result-label {
     display: table-cell;
-    font-size: 16px;
+    font-size: 0.95em;
     color: @panel-text-color;
     font-weight: lighter;
 }
 
 .search-tab-provider-message {
-    font-size: 16px;
+    font-size: 0.95em;
     color: @panel-text-color;
     font-weight: lighter;
     font-style: italic;
@@ -124,7 +124,7 @@
 }
 
 .search-tab-provider-searching {
-    font-size: 16px;
+    font-size: 0.95em;
     color: @panel-text-color;
     font-weight: lighter;
     font-style: italic;
