--- a/src/main.less
+++ b/src/main.less
@@ -1,5 +1,4 @@
 @default-font: 'Roboto', sans-serif;
-@condensed-font: 'Roboto Condensed', sans-serif;
 @highlight-color: #68ADFE;
 @left-side-panels-width: 350px;
 
@@ -9,7 +8,7 @@
 @panel-emphasized-text-color: #FFFFFF;
 @panel-selected-text-color: @highlight-color;
 @panel-box-shadow: 2px 2px 5px rgba(0,0,0,0.26);
-@panel-element-border: 1px solid #CCCCCC;
+@panel-element-border: 1px solid rgba(100,100,100, 0.6);
 @panel-section-background-color: #282D32;
 @panel-form-input-background-color: #838689;
 @panel-form-input-text-color: #FFFFFF;
@@ -31,7 +30,7 @@
 
 // Floating elements
 @floating-background-color: rgba(47,53,60,80%);
-@floating-text-color: #CCCCCC;
+@floating-text-color: #FFFFFF;
 @floating-element-border: 1px solid #555555;
 
 // Menu bar
