--- a/src/Styles/ExplorerPanel.less
+++ b/src/Styles/ExplorerPanel.less
@@ -67,7 +67,7 @@
 
 .explorer-panel-tab {
     line-height: 39px;
-    font-size: 16px;
+    font-size: 0.95em;
     font-weight: normal;
     color: @explorer-panel-inactive-tab-text-color;
     display: table-cell;
