Give legends a max width and make them direct links to the image.

--- a/src/Styles/NowViewingTab.less
+++ b/src/Styles/NowViewingTab.less
@@ -113,6 +113,7 @@
     padding-left: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
+    max-width: @explorer-panel-width - 56px;
 }
 
 .now-viewing-item-opacity {
