--- a/src/Styles/Navigation.less
+++ b/src/Styles/Navigation.less
@@ -48,3 +48,10 @@
     height: 24px;
     fill: @floating-text-color;
 }
+
+// Don't display the nav controls on small screens like mobile phones.
+@media screen and (max-width: 400px) {
+    .navigation-controls {
+        display: none;
+    }
+}
