--- a/src/Styles/Navigation.less
+++ b/src/Styles/Navigation.less
@@ -7,6 +7,7 @@
 }
 
 .navigation-control {
+    .clickable;
     padding-top: 10px;
     padding-bottom: 10px;
     border-bottom: @floating-element-border;
