Better Cesium frame skipping.

--- a/src/Styles/LocationBar.less
+++ b/src/Styles/LocationBar.less
@@ -24,3 +24,9 @@
     color: @floating-text-color;
     padding-right: 10px;
 }
+
+@media print {
+    .location-bar {
+        display: none;
+    }
+}
