--- a/src/Styles/DistanceLegend.less
+++ b/src/Styles/DistanceLegend.less
@@ -4,12 +4,14 @@
     bottom: 30px;
     height: 30px;
     width: 125px;
+    border: 1px solid rgba(255,255,255,0.1);
 }
 
 .distance-legend-label {
     display: inline-block;
     font-family: @default-font;
     font-size: 0.9em;
+    font-weight: lighter;
     line-height: 30px;
     color: @floating-text-color;
     width: 125px;
