Add callout to Settings panel, and make it fade rather than slide.

--- a/src/Views/SettingsPanel.html
+++ b/src/Views/SettingsPanel.html
@@ -1,5 +1,5 @@
 <div class="settings-panel" data-bind="css: { 'settings-panel-hidden': !isVisible }">
-    <!--<div class="settings-panel-callout"></div>-->
+    <div class="settings-panel-callout"></div>
     <div class="settings-panel-body">
         <div class="settings-panel-section">
             <div class="settings-panel-section-header">View</div>
