--- a/src/Styles/SettingsPanel.less
+++ b/src/Styles/SettingsPanel.less
@@ -5,25 +5,36 @@
     right: 100px;
     width: 260px;
     position: absolute;
+    box-shadow: @panel-box-shadow;
 
-    -webkit-transition: right @explorer-panel-close-animation-length ease-out;
-    -moz-transition: right @explorer-panel-close-animation-length ease-out;
-    -ms-transition: right @explorer-panel-close-animation-length ease-out;
-    -o-transition: right @explorer-panel-close-animation-length ease-out;
-    transition: right @explorer-panel-close-animation-length ease-out;
+    -webkit-transition: opacity @explorer-panel-close-animation-length ease-out;
+    -moz-transition: opacity @explorer-panel-close-animation-length ease-out;
+    -ms-transition: opacity @explorer-panel-close-animation-length ease-out;
+    -o-transition: opacity @explorer-panel-close-animation-length ease-out;
+    transition: opacity @explorer-panel-close-animation-length ease-out;
 }
 
 .settings-panel-hidden {
-    right: -300px;
+    opacity: 0;
+    visibility: hidden;
 
-    -webkit-transition: right @explorer-panel-close-animation-length ease-out;
-    -moz-transition: right @explorer-panel-close-animation-length ease-out;
-    -ms-transition: right @explorer-panel-close-animation-length ease-out;
-    -o-transition: right @explorer-panel-close-animation-length ease-out;
-    transition: right @explorer-panel-close-animation-length ease-out;
+    -webkit-transition: opacity @explorer-panel-close-animation-length ease-out, visibility 0s @explorer-panel-close-animation-length;
+    -moz-transition: opacity @explorer-panel-close-animation-length ease-out, visibility 0s @explorer-panel-close-animation-length;
+    -ms-transition: opacity @explorer-panel-close-animation-length ease-out, visibility 0s @explorer-panel-close-animation-length;
+    -o-transition: opacity @explorer-panel-close-animation-length ease-out, visibility 0s @explorer-panel-close-animation-length;
+    transition: opacity @explorer-panel-close-animation-length ease-out, visibility 0s @explorer-panel-close-animation-length;
 }
 
 .settings-panel-callout {
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    border-bottom: 10px solid @panel-section-background-color;
+    border-left: 0.8em solid transparent;
+    border-right: 0.8em solid transparent;
+    border-top: 0.8em solid transparent;
+    top: -20px;
+    left: 45%;
 }
 
 .settings-panel-body {
