--- a/src/Styles/SettingsPanel.less
+++ b/src/Styles/SettingsPanel.less
@@ -34,7 +34,7 @@
     border-right: 0.8em solid transparent;
     border-top: 0.8em solid transparent;
     top: -20px;
-    left: 45%;
+    left: 122px;
 }
 
 .settings-panel-body {
