--- a/src/main.less
+++ b/src/main.less
@@ -23,6 +23,8 @@
 @explorer-panel-active-tab-underline-color: @highlight-color;
 @explorer-panel-close-animation-length: 0.25s;
 @explorer-panel-tab-switch-animation-length: 0.25s;
+@explorer-panel-badge-background-color: @highlight-color;
+@explorer-panel-badge-text-color: @panel-emphasized-text-color;
 
 // Brand bar
 @brand-bar-background-color: @panel-section-background-color;
