--- a/src/Views/DataCatalogTab.html
+++ b/src/Views/DataCatalogTab.html
@@ -46,6 +46,15 @@
             <div class="data-catalog-top-group-icon" data-bind="cesiumSvgPath: { path: isOpen ? $root.svgArrowDown : $root.svgArrowRight, width: 32, height: 32 }"></div>
         </div>
     </div>
+    <!-- ko if: isLoading -->
+        <div class="data-catalog-top-group-contents">
+            <div class="data-catalog-member">
+                <div class="data-catalog-member-top-row">
+                    <div class="data-catalog-item-label">Loading...</div>
+                </div>
+            </div>
+        </div>
+    <!-- /ko -->
     <!-- ko if: typeof items !== 'undefined' && isOpen -->
         <div class="data-catalog-top-group-contents" data-bind="template: { name: 'data-catalog-item-template', foreach: items }"></div>
     <!-- /ko -->
