Less jumpy reordering.

--- a/src/Views/ExplorerPanel.html
+++ b/src/Views/ExplorerPanel.html
@@ -7,7 +7,7 @@
                          click: activate">
             <div class="explorer-panel-tab-content">
               <div data-bind="text: name"></div>
-              <div class="explorer-panel-tab-badge" data-bind="text: badgeText, visible: typeof badgeText !== 'undefined', css: { 'explorer-panel-tab-badge-pop': badgeIsPopped }, event: { transitionend: unpopBadge, webkitTransitionEnd: unpopBadge }"></div>
+              <div class="explorer-panel-tab-badge" data-bind="text: badgeText, visible: typeof badgeText !== 'undefined', css: { 'explorer-panel-tab-badge-pop': badgeIsPopped }, event: { transitionend: unpopBadge }"></div>
             </div>
           </div>
         </div>
